--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,45 +1,164 @@
 trigger:
-  - none
-  
+  batch: true
+  branches:
+    include:
+      - master
+      - stage
+      - release/*
+      - develop
+      - hotfix/*
+      #- feature/*
+
 variables:
-  VmImageName: 'ubuntu-latest'
-  ContainerRegistryName: 'crdesacontainer'
-  DockerNamespace: '$(ContainerRegistryName).azurecr.io'
-  DockerRepository: 'desa/Admision_Digital/ACHS-MS-Orquestador'
-  ImageTag: '_$(Build.BuildId)'
-  
+  - group: Variables-CICD_IaC
+  - name: vmImageName
+    value: "ubuntu-latest"
+  - name: ContainerRegistryName
+    value: "crdesacontainer"
+  - name: DockerRepository
+    value: "desa/admision_digital/achs-ms-bd"
+  - name: ImageTag
+    value: "_$(Build.BuildId)"
+  - name: appNameSTG
+    value: "wa-stg-admdig-bd"
+  - name: azureSubcritionSTG
+    value: "ASC-STG-ADMISIONDIGITAL"
+  - name: appNameQA
+    value: "wa-qa-admisiondigital-bd"
+  - name: azureSubcritionQA
+    value: "ASC-QA-ADMISIONDIGITAL"
+  - name: appNameDESA
+    value: "wa-desa-admdig-bd"
+  - name: azureSubcritionDESA
+    value: "ASC-DESA-ADMISIONDIGITAL"
+
+pool:
+  vmImage: $(vmImageName)
 
 stages:
-  - stage: Deploy_DESA
-    displayName: Deploy DESA
-    jobs: 
-      - job: buildJob
-        displayName: Build and Publish
-        pool:
-          vmImage: $(VmImageName)
-        variables:
-          - group: Variables-CICD_IaC
-          - name: RUTADIRECTORIOENVS
-            value: envs
+  - stage: INFO
+    displayName: "Building"
+    jobs:
+      - deployment: Info
+        displayName: "Info"
+        environment: "Info"
+      - job: Build
+        displayName: "Info"
         steps:
-        - script: |
-            pwd
-            ls -lha
-        - task: Docker@2
-          displayName: Build and Push Docker Image
-          inputs:
-            repository: $(DockerRepository)
-            command: buildAndPush
-            Dockerfile: ./Dockerfile
-            containerRegistry: $(ContainerRegistryName)
-            tags: $(ImageTag)
-          env:
-            ARM_SKIP_PROVIDER_REGISTRATION: true
-            ARM_CLIENT_ID: $(ARM_CLIENT_ID_DESA)
-            ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET_DESA)
-            ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID_DESA)
-            ARM_TENANT_ID: $(ARM_TENANT_ID)
-            ARM_ACCESS_KEY: $(ARM_ACCESS_KEY_DESA)
-            TF_VAR_arm_client_id: $(ARM_CLIENT_ID_DESA)
-            TF_VAR_arm_client_secret: $(ARM_CLIENT_SECRET_DESA)
-            TF_VAR_arm_tenant_id: $(ARM_TENANT_ID)
+          - script: |
+              echo "TargetBranch" $(System.PullRequest.TargetBranch)
+              echo "sourceBranch " $(System.pullRequest.sourceBranch)
+
+              echo "sourceBranchDeployToDESA "$(sourceBranchDeployToDESA)
+              echo "targetBranchDeployToDESA "$(targetBranchDeployToDESA)
+
+              echo "sourceBranchDeployToQA "$(sourceBranchDeployToQA)
+              echo "targetBranchDeployToQA "$(targetBranchDeployToQA)
+
+              echo "BuildReason " $(Build.Reason)
+  # STAGE
+  - stage: Deploy_DESA
+    displayName: "Building Desploy DESA"
+    condition: |
+      and(
+        startsWith(variables['system.pullRequest.sourceBranch'], 'refs/heads/feature'),
+        eq(variables['Build.Reason'], 'PullRequest')
+      )
+    jobs:
+      - deployment: Deploy
+        displayName: "Deploy DESA"
+        environment: "Deploy_DESA"
+      - job: Build
+        displayName: "Deploy_DESA"
+        steps:
+          - task: Docker@2
+            displayName: Build Docker Image
+            inputs:
+              containerRegistry: $(ContainerRegistryName)
+              repository: $(DockerRepository)
+              command: build
+              Dockerfile: ./Dockerfile
+              tags: $(ImageTag)
+              arguments: --build-arg env=development
+          - task: Docker@2
+            displayName: Push Docker Image
+            inputs:
+              containerRegistry: $(ContainerRegistryName)
+              repository: $(DockerRepository)
+              command: push
+              tags: $(ImageTag)
+          - task: AzureWebAppContainer@1
+            inputs:
+              azureSubscription: $(azureSubcritionDESA)
+              appName: $(appNameDESA)
+              containers: $(ContainerRegistryName).azurecr.io/$(DockerRepository):$(ImageTag)
+  - stage: Deploy_QA
+    displayName: "Building Deploy QA"
+    condition: |
+      and(
+        startsWith(variables['system.pullRequest.sourceBranch'], 'refs/heads/develop'),
+        eq(variables['Build.Reason'], 'PullRequest')
+       )
+    jobs:
+      - deployment: Deploy
+        displayName: "Deploy QA"
+        environment: "Deploy_QA"
+      - job: Build
+        displayName: "Deploy QA"
+        steps:
+          - task: Docker@2
+            displayName: Build Docker Image
+            inputs:
+              containerRegistry: $(ContainerRegistryName)
+              repository: $(DockerRepository)
+              command: build
+              Dockerfile: ./Dockerfile
+              tags: $(ImageTag)
+              arguments: --build-arg env=QA
+          - task: Docker@2
+            displayName: Push Docker Image
+            inputs:
+              containerRegistry: $(ContainerRegistryName)
+              repository: $(DockerRepository)
+              command: push
+              tags: $(ImageTag)
+          - task: AzureWebAppContainer@1
+            inputs:
+              azureSubscription: $(azureSubcritionQA)
+              appName: $(appNameQA)
+              containers: $(ContainerRegistryName).azurecr.io/$(DockerRepository):$(ImageTag)
+  - stage: Deploy_STG
+    displayName: "Building Deploy STG"
+    condition: |
+      and(
+        startsWith(variables['system.pullRequest.sourceBranch'], 'refs/heads/release'),
+        eq(variables['Build.Reason'], 'PullRequest')
+      )
+    jobs:
+      - deployment: Deploy
+        displayName: "Deploy STG"
+        environment: "Deploy_STG"
+      - job: Build
+        displayName: "Deploy STG"
+        steps:
+          - task: Docker@2
+            displayName: Build Docker Image
+            inputs:
+              containerRegistry: $(ContainerRegistryName)
+              repository: $(DockerRepository)
+              command: build
+              Dockerfile: ./Dockerfile
+              tags: $(ImageTag)
+              arguments: --build-arg env=production
+          - task: Docker@2
+            displayName: Push Docker Image
+            inputs:
+              containerRegistry: $(ContainerRegistryName)
+              repository: $(DockerRepository)
+              command: push
+              tags: $(ImageTag)
+          - task: AzureWebAppContainer@1
+            inputs:
+              azureSubscription: $(azureSubcritionSTG)
+              appName: $(appNameSTG)
+              containers: $(ContainerRegistryName).azurecr.io/$(DockerRepository):$(ImageTag)
