--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "applicationinsights": "^1.7.5",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
+    "custom-env": "^2.0.1",
     "express": "^4.17.1",
     "express-promise-router": "^3.0.3",
     "morgan": "^1.10.0",
