--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -149,7 +149,7 @@ stages:
               command: build
               Dockerfile: ./Dockerfile
               tags: $(ImageTag)
-              arguments: --build-arg env=production
+              arguments: --build-arg env=staging
           - task: Docker@2
             displayName: Push Docker Image
             inputs:
