Add geolocalizacion API

--- a/.env.QA
+++ b/.env.QA
@@ -1,2 +1,3 @@
 URL_MICROSERVICIO_DATABASE=https://wa-qa-admisiondigital-bd.azurewebsites.net
 URL_MICROSERVICIO_MIDDLEWARE_SAP=https://wa-qa-admisiondigital-msmiddlewaresap.azurewebsites.net
+URL_MICROSERVICIO_GEOLOCALIZACION=https://wa-stg-admdig-geolocalizacion.azurewebsites.net
