--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 URL_MICROSERVICIO_DATABASE=https://wa-desa-admdig-bd.azurewebsites.net
 URL_MICROSERVICIO_MIDDLEWARE_SAP=https://wa-desa-admdig-msmiddlewaresap.azurewebsites.net
+URL_MICROSERVICIO_GEOLOCALIZACION=https://wa-desa-admdig-geolocalizacion.azurewebsites.net
