--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-URL_MICROSERVICIO_DATABASE=https://wa-stg-admdig-bd.azurewebsites.net
-URL_MICROSERVICIO_MIDDLEWARE_SAP=https://wa-stg-admdig-msmiddlewaresap.azurewebsites.net
-URL_MICROSERVICIO_GEOLOCALIZACION=https://wa-stg-admdig-geolocalizacion.azurewebsites.net
+URL_MICROSERVICIO_DATABASE=https://wa-prod-admdig-bd.azurewebsites.net
+URL_MICROSERVICIO_MIDDLEWARE_SAP=https://wa-prod-admdig-msmiddlewaresap.azurewebsites.net
+URL_MICROSERVICIO_GEOLOCALIZACION=https://wa-prod-admdig-geolocalizacion.azurewebsites.net
