--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 URL_MICROSERVICIO_DATABASE=https://wa-desa-admdig-bd.azurewebsites.net
 URL_MICROSERVICIO_MIDDLEWARE_SAP=https://wa-desa-admdig-msmiddlewaresap.azurewebsites.net
 URL_MICROSERVICIO_GEOLOCALIZACION=https://wa-desa-admdig-geolocalizacion.azurewebsites.net
-URL_MICROSERVICIO_AUTENTIFICACION=https://wa-desa-auntentificaciontemp.azurewebsites.net/
+URL_MICROSERVICIO_AUTENTIFICACION=https://wa-desa-admdig-microservico-autentificacion
