Cambios de URL Firma

--- a/.env.staging
+++ b/.env.staging
@@ -2,3 +2,4 @@ URL_MICROSERVICIO_DATABASE=https://wa-stg-admdig-bd.azurewebsites.net
 URL_MICROSERVICIO_MIDDLEWARE_SAP=https://wa-stg-admdig-msmiddlewaresap.azurewebsites.net
 URL_MICROSERVICIO_GEOLOCALIZACION=https://wa-stg-admdig-geolocalizacion.azurewebsites.net
 URL_MICROSERVICIO_AUTENTIFICACION=https://wa-desa-admdig-microservico-autentificacion
+URL_MICROSERVICIO_FIRMA=https://wa-desa-admdig-microservico-firmadigital
