--- a/.env.QA
+++ b/.env.QA
@@ -2,3 +2,4 @@ URL_MICROSERVICIO_DATABASE=https://wa-qa-admisiondigital-bd.azurewebsites.net
 URL_MICROSERVICIO_MIDDLEWARE_SAP=https://wa-qa-admisiondigital-msmiddlewaresap.azurewebsites.net
 URL_MICROSERVICIO_GEOLOCALIZACION=https://wa-qa-admisiondigital-geolocalizacion.azurewebsites.net
 URL_MICROSERVICIO_AUTENTIFICACION=https://wa-desa-admdig-microservico-autentificacion
+URL_MICROSERVICIO_FIRMA=https://wa-desa-admdig-microservico-firmadigital
