--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-promise-router": "^3.0.3",
     "morgan": "^1.10.0",
-    "pg": "^7.18.2"
+    "pg": "^7.18.2",
+    "swagger-ui-express": "^4.1.4"
   }
 }
