Se agrega variable env a pipeline

--- a/manifests/api-orquestador-deployment.yaml
+++ b/manifests/api-orquestador-deployment.yaml
@@ -14,6 +14,9 @@ spec:
       containers:
       - name: api-orquestador
         image: crdesacontainer.azurecr.io/desa/admision_digital/achs-ms-orquestador:_18408 
+         env:
+          - name: env
+            value: 'aks'        
         imagePullPolicy: Always
         ports:
         - containerPort: 80
