Se cambia valor variable de entorno.

--- a/manifests/api-orquestador-deployment.yaml
+++ b/manifests/api-orquestador-deployment.yaml
@@ -15,7 +15,7 @@ spec:
       - name: api-orquestador
         image: crdesacontainer.azurecr.io/desa/admision_digital/achs-ms-orquestador:_18408 
         env:
-        - name: env
+        - name: NODE_ENV
           value: aks        
         imagePullPolicy: Always
         ports:
