--- a/.env.aks
+++ b/.env.aks
@@ -3,3 +3,4 @@ URL_MICROSERVICIO_MIDDLEWARE_SAP=https://desa.api-middelware.admision.40.121.134
 URL_MICROSERVICIO_GEOLOCALIZACION=https://desa.geo.admision.40.121.134.234.nip.io
 URL_MICROSERVICIO_AUTENTIFICACION=https://https://desa.firmauth.admision.40.121.134.234.nip.io
 URL_MICROSERVICIO_FIRMA=https://desa.firmadigital.admision.40.121.134.234.nip.io
+NODE_TLS_REJECT_UNAUTHORIZED=0
